--- a/django_blog/blog/templates/blog/posts_by_tag.html
+++ b/django_blog/blog/templates/blog/posts_by_tag.html
@@ -1,11 +1,15 @@
-<h2>Posts tagged with "{{ tag_name }}"</h2>
+{% extends "blog/base.html" %}
 
-{% if object_list %}
-    <ul>
-        {% for post in object_list %}
-            <li><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>No posts found with this tag.</p>
-{% endif %}
+{% block content %}
+<h2>Posts tagged with "{{ tag.name }}"</h2>
+
+<ul>
+  {% for post in posts %}
+    <li>
+      <a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a>
+    </li>
+  {% empty %}
+    <li>No posts found.</li>
+  {% endfor %}
+</ul>
+{% endblock %}
